# bng-path-finder

./: .dockerignore  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  README.md  firebase.json
.github/workflows/: deploy.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/bng/: calculator.py  field_map.py  form_mapper.py  form_models.py  pdf_filler.py  weights.py
backend/layers/: ancient_woodland.py  base.py  habitat_networks.py  lnrs.py  sssi_irz.py  water.py
backend/pathfinding/: astar.py  cost_raster.py  grid.py  smoother.py
backend/report/: builder.py  researcher.py  summariser.py
backend/routers/: form.py  recommendations.py  report.py  route.py
frontend/: DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
frontend/src/components/: CostBreakdown.tsx  DeveloperDetailsModal.tsx  Header.tsx  InfoModal.tsx  MapView.tsx  MarkerLayer.tsx  ReportPanel.tsx  ReportView.tsx  RouteLayer.tsx  Sidebar.tsx
frontend/src/hooks/: useFormPdf.ts  useReport.ts  useResearch.ts  useRoute.ts
frontend/src/types/: api.ts
frontend/src/utils/: geo.ts  print.ts
